--- a/CSWPF/Windows/MainWindow.xaml
+++ b/CSWPF/Windows/MainWindow.xaml
@@ -7,7 +7,7 @@
         Title="MainWindow" MinHeight="450" MinWidth="800"
         FontFamily="Tahoma"
         FontSize="16"
-        WindowStartupLocation="CenterScreen" Closed="MainWindow_OnClosed">
+        WindowStartupLocation="CenterScreen">
     <Grid Margin="5">
         
         <Grid.RowDefinitions>
