--- a/CSWPF/Windows/MainWindow.xaml
+++ b/CSWPF/Windows/MainWindow.xaml
@@ -16,7 +16,17 @@
         </Grid.RowDefinitions>
         
         <Grid Grid.Row="0">
-            <Button Click="AddClick" Width="200" Height="40" HorizontalAlignment="Right" Margin="0,0,10,0" Content="Добавить новый аккаунт"/>
+            <StackPanel Name="PanelIcons" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                <Button Width="32" Height="32" Click="AddClick" Style="{StaticResource ImageButtonStyle}" >
+                    <Image Stretch="Uniform" Source="../Icons/plus.png"/>
+                </Button>
+                
+                <Button Width="32" Height="32"  Style="{StaticResource ImageButtonStyle}">
+                    <Image Stretch="Uniform" Source="../Icons/gear.png"/>
+                </Button>
+            </StackPanel>
+            
+            <Button Visibility="Collapsed" Click="AddClick" Width="200" Height="40" HorizontalAlignment="Right" Margin="0,0,10,0" Content="Добавить новый аккаунт"/>
             <TextBox Name="Account" Width="200" Height="40"/>
         </Grid>
         
@@ -40,9 +50,13 @@
         </Grid>
         
         <StackPanel Grid.Row="1" Name="PanelForAdd" Margin="20" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed">
-            <TextBox Width="150" Height="30" Margin="5" Name="LoginTextBox"/>
-            <TextBox Width="150" Height="30" Margin="5" Name="PasswordTextBox"/>
-            <Button Click="AddBtClick" Width="150" Height="30" Margin="5" Content="Добавить"/>
+            <TextBox Width="300" Height="40" Margin="5" Name="LoginTextBox"/>
+            <TextBox Width="300" Height="40" Margin="5" Name="PasswordTextBox"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Name="PanelPos">
+                <Button Click="AddBtClick" Width="150" Height="40" Margin="5" Content="Добавить"/>
+                <Button Click="BackBtClick" Width="150" Height="40" Margin="5" Content="Назад"/>
+            </StackPanel>
+                
         </StackPanel>
         
     </Grid>
