--- a/CSWPF/App.xaml
+++ b/CSWPF/App.xaml
@@ -78,7 +78,7 @@
 
         <Style TargetType="TextBox">
             <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Margin" Value="5"/>
             <Setter Property="Height" Value="35"/>
             <Style.Resources>
                 <Style TargetType="Border">
