--- a/CSWPF/App.xaml
+++ b/CSWPF/App.xaml
@@ -2,113 +2,35 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CSWPF"
-             StartupUri="Windows/MainWindow.xaml">
+             xmlns:viewModel = "clr-namespace:CSWPF.MVVM.ViewModel"
+             xmlns:view="clr-namespace:CSWPF.MVVM.View">
     <Application.Resources>
         
-        <Style TargetType="{x:Type Button}" x:Key="ImageButtonStyle">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <ContentPresenter/>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ImageButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/StatusBarTheme.xaml"/>
+                <ResourceDictionary Source="Theme/AccentButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
+                <ResourceDictionary Source="Theme/PasswordboxTheme.xaml"/>
+                <ResourceDictionary Source="Theme/LabelTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
             
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
+            <DataTemplate DataType="{x:Type  TypeName=viewModel:HomeViewModel}">
+               <view:HomeView/>
+            </DataTemplate>
             
-            <Style.Triggers>
-                <EventTrigger RoutedEvent="Click">
-                    <EventTrigger.Actions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <DoubleAnimation Storyboard.TargetProperty="Width" Duration="0:0:1" To="110" AutoReverse="True" />
-                                <DoubleAnimation Storyboard.TargetProperty="Height" Duration="0:0:1" To="40" AutoReverse="True" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger.Actions>
-                </EventTrigger>
-            </Style.Triggers>
-        </Style>
-        
-        <Style TargetType="Button">
-            <Setter Property="Background" Value="#ff4a6d"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
-        <Style TargetType="StatusBar" x:Key="StatusBarStyle">
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
-        <Style x:Key="AccentButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="#ff4a6d"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
-        <Style TargetType="ComboBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Height" Value="30"/>
-        </Style>
+            <DataTemplate DataType="{x:Type TypeName=viewModel:AddViewModel}">
+                <view:AddingUsersView/>
+            </DataTemplate>
 
+            <DataTemplate DataType="{x:Type TypeName=viewModel:SettingViewModel}">
+                <view:SettingView/>
+            </DataTemplate>
 
-        <Style TargetType="TextBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
-        <Style TargetType="PasswordBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="5"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
-        <Style TargetType="Label">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="5"/>
-            <Setter Property="Height" Value="35"/>
-            <Style.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </Style.Resources>
-        </Style>
-        
+        </ResourceDictionary>
         
     </Application.Resources>
 </Application>
