--- a/CSWPF/MVVM/View/HomeView.xaml
+++ b/CSWPF/MVVM/View/HomeView.xaml
@@ -4,13 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:CSWPF.MVVM.View"
-             xmlns:viewModel = "clr-namespace:CSWPF.MVVM.ViewModel"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-  
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Top">
-        <TextBlock Text="Home" Foreground="White" FontSize="25"/>
-        <StackPanel Name="PanelForStart" Orientation="Vertical"/>
-    </Grid>
-    
+             d:DesignHeight="450" d:DesignWidth="800" >
+    <StackPanel>
+        <TextBlock Text="Home" Foreground="White" FontSize="28" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+        <StackPanel Name="PanelForStart" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </StackPanel>
 </UserControl>
